Fixes collapsed content area on IE.
I'm still investigating when this regression happened, but it is affecting all pages, not just grids. Stripped back all content from header (additional CSS styles), removed progress bar and entire page contents, problem still visible. Implemented a min-height directive that only gets applied to IE and resolves the issue.

--- a/Survey/source/styles/base.scss
+++ b/Survey/source/styles/base.scss
@@ -85,6 +85,7 @@ body > form {
 .surroundcontent {
     grid-area: content;
     margin-bottom: 1em;
+    min-height: 66vh;
 }
 
 .footer {
